[package]
name = "query"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
common = { path = "../common" }
storage = { path = "../storage" }
indexing = { path = "../indexing" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Collections
hashbrown = { workspace = true }

# Graph algorithms (for shortest path)
petgraph = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
