[package]
name = "tabagent-server"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "Rust-native server for TabAgent with native messaging, HTTP API, and WebRTC support"

[lib]
name = "tabagent_server"
path = "src/lib.rs"

[[bin]]
name = "tabagent-server"
path = "src/main.rs"

[dependencies]
# Workspace crates (already exist)
appstate = { path = "../appstate" }
common = { path = "../common" }
tabagent-values = { path = "../values" }
storage = { path = "../storage" }

# Transport layer crates (API, Native Messaging, WebRTC)
tabagent-api = { path = "../api" }
tabagent-native-messaging = { path = "../native-messaging" }
tabagent-webrtc = { path = "../webrtc" }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }
bincode = { workspace = true }

async-trait = "0.1"
# Note: python-ml-bridge exists but is for Weaver's MlBridge trait
# Server uses its own python_bridge module for general inference

# Async runtime (RAG: Tokio for enterprise-grade async)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Web framework (RAG: Axum for enterprise-grade HTTP)
axum = { version = "0.8.6", features = ["macros"] }
tower = { version = "0.5.2", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace", "compression-full"] }
hyper = { version = "1", features = ["full"] }

# WebRTC
webrtc = "0.14.0"
tokio-tungstenite = "0.28.0"  # For WebSocket signaling

# Serialization (RAG: Type-safe JSON handling)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"

# Error handling (RAG: thiserror for library, anyhow for application)
anyhow = "1"
thiserror = "2.0.17"

# Logging (RAG: tracing for structured logging)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# API documentation (RAG: OpenAPI/Swagger compliance)
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }

# Configuration
config = "0.15.18"
clap = { version = "4", features = ["derive", "env"] }
toml = "0.9.8"

# Python bridge (RAG: PyO3 for FFI with proper safety)
pyo3 = { workspace = true, features = ["auto-initialize"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1.0"  # Thread-safe HashMap for loaded models
parking_lot = "0.12"  # Better Mutex/RwLock
dirs = "5.0"  # Cross-platform config directories
keyring = { version = "3.2", optional = true }  # OS credential storage
futures = "0.3"  # For BoxFuture type

[features]
default = ["keyring"]
keyring = ["dep:keyring"]

[dev-dependencies]
# Testing (RAG: Comprehensive test coverage required)
tokio-test = "0.4"
tempfile = "3"
proptest = "1"
criterion = "0.7.0"
