[package]
name = "tabagent-server"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "Rust-native server for TabAgent with native messaging, HTTP API, and WebRTC support"

[lib]
name = "tabagent_server"
path = "src/lib.rs"

[[bin]]
name = "tabagent-server"
path = "src/main.rs"

[dependencies]
# Workspace crates (already exist)
appstate = { path = "../appstate" }
common = { path = "../common" }
tabagent-values = { path = "../values" }
storage = { path = "../storage" }

# Transport layer crates (API, Native Messaging, WebRTC, MCP)
tabagent-api = { path = "../api" }
tabagent-native-messaging = { path = "../native-messaging" }
tabagent-webrtc = { path = "../webrtc" }
tabagent-mcp = { path = "../mcp" }

# gRPC
tonic = { workspace = true }
prost = { workspace = true }

async-trait = { workspace = true }
# Note: python-ml-bridge exists but is for Weaver's MlBridge trait
# Server uses its own python_bridge module for general inference

# Async runtime (RAG: Tokio for enterprise-grade async)
tokio = { workspace = true }
tokio-util = { workspace = true }

# Web framework (RAG: Axum for enterprise-grade HTTP)
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# WebRTC
webrtc = { workspace = true }
tokio-tungstenite = { workspace = true }

# Serialization (RAG: Type-safe JSON handling)
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }
rkyv = { workspace = true }

# Error handling (RAG: thiserror for library, anyhow for application)
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging (RAG: tracing for structured logging)
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# API documentation (RAG: OpenAPI/Swagger compliance)
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }
utoipa-rapidoc = { workspace = true }
utoipa-redoc = { workspace = true }

# Configuration
config = "0.15.18"
clap = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
dirs = { workspace = true }
keyring = { workspace = true, optional = true }
futures = { workspace = true }

[features]
default = ["keyring"]
keyring = ["dep:keyring"]

[dev-dependencies]
# Testing (RAG: Comprehensive test coverage required)
tokio-test = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
