[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
indexing = { path = "../indexing" }
sled = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }

