[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
mdbx-base = { path = "../mdbx-base" }
rkyv = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
uuid = { workspace = true }

[[bench]]
name = "zero_copy_performance"
harness = false

