[package]
name = "tabagent-values"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "Unified value system for TabAgent - type-safe request/response/data handling"

[dependencies]
# Serialization (RAG: Type-safe JSON/binary handling)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (RAG: thiserror for library crates)
thiserror = "2.0.16"
anyhow = "1"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# OpenAPI schema generation
utoipa = { version = "5", features = ["uuid", "chrono"] }

# Tensor types (optional, for future ONNX/GGUF integration)
ndarray = { version = "0.16.0", optional = true }

[features]
default = []
ndarray = ["dep:ndarray"]

[dev-dependencies]
# Testing (RAG: Real tests, no mocks)
proptest = "1"

