[package]
name = "tabagent-values"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "Unified value system for TabAgent - type-safe request/response/data handling"

[dependencies]
# Serialization (RAG: Type-safe JSON/binary handling)
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rkyv = { workspace = true }

# Error handling (RAG: thiserror for library crates)
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }

# OpenAPI schema generation
utoipa = { workspace = true }

# Tensor types (optional, for future ONNX/GGUF integration)
ndarray = { workspace = true, optional = true }

[features]
default = []
ndarray = ["dep:ndarray"]

[dev-dependencies]
# Testing (RAG: Real tests, no mocks)
proptest = { workspace = true }

