[package]
name = "weaver"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
common = { path = "../common" }
storage = { path = "../storage" }
indexing = { path = "../indexing" }
query = { path = "../query" }
task-scheduler = { path = "../task-scheduler" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rkyv = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
uuid = { workspace = true }
async-trait = { workspace = true }
num_cpus = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
env_logger = { workspace = true }