[package]
name = "tabagent-webrtc"
version = "0.1.0"
edition = "2021"
authors = ["TabAgent Team"]
description = "WebRTC signaling and data channel handler for TabAgent Server"
license = "MIT"

[lib]
name = "tabagent_webrtc"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
tabagent-values = { path = "../values" }
common = { path = "../common" }
appstate = { path = "../appstate" }

# WebRTC implementation
webrtc = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
async-trait = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = []

