[workspace]
members = [ "bindings", "common", "indexing", "ml-bridge", "query","storage", "task-scheduler", "weaver"]
resolver = "2"

[workspace.dependencies]
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
tokio = { version = "1.35", features = ["full"] }
hnsw_rs = "0.3"
petgraph = "0.6"
hashbrown = "0.15"
log = "0.4"
uuid = { version = "1.6", features = ["v4"] }
